# dfu

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
dfu/: __about__.py  __main__.py  cli.py  config.py
dfu/api/: __init__.py  entrypoint.py  playground.py  plugin.py  state.py  store.py
dfu/commands/: __init__.py  apply.py  chroot.py  create_config.py  create_distribution.py  create_package.py  create_snapshot.py  diff.py  install.py  load_config.py  load_package_config.py  load_store.py  ls_files.py  shell.py  uninstall.py
dfu/config/: __init__.py  default_config.py
dfu/distribution/: pkgbuild.py
dfu/helpers/: copy_files.py  handle_errors.py  json_serializable.py  normalize_snapshot_index.py  subshell.py
dfu/installed_packages/: pacman.py
dfu/package/: acl_file.py  dfu_diff.py  install.py  package_config.py  patch_config.py  uninstall.py  version_number.py
dfu/plugins/: autosave.py  pacman.py
dfu/revision/: git.py
dfu/snapshots/: btrfs.py  changes.py  proot.py  snapper.py  snapper_diff.py  sort_snapper_configs.py
docs/: file_permissions.md
tests/: conftest.py  test_acl_file.py  test_autosave.py  test_btrfs.py  test_changes.py  test_cli_errors.py  test_config.py  test_default_config.py  test_dfu_diff.py  test_git.py  test_install.py  test_json_serializable.py  test_package_config.py  test_pacman.py  test_patch_config.py  test_pkgbuild.py  test_playground.py  test_plugin.py  test_proot.py  test_snapper.py  test_snapper_diff.py  test_sort_snapper_configs.py  test_state.py  test_store.py  test_uninstall.py  test_version_number.py
types/dataclass_wizard/: __init__.pyi  errors.pyi
types/unidiff/: __init__.pyi  patch.pyi
typings/unidiff/: __init__.pyi  constants.pyi  patch.pyi
