[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfu"
dynamic = ["version"]
description = 'Create installers from btrfs snapshots'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Anil Kulkarni", email = "anil@terminal.space" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click >=8.1.7",
  "msgspec >= 0.18.5",
  "platformdirs >= 4.1.0",
  "tomlkit >= 0.12.3",
  "unidiff >= 0.7.5",
]

[project.urls]
Documentation = "https://github.com/intentionally-left-nil/dfu#readme"
Issues = "https://github.com/intentionally-left-nil/dfu/issues"
Source = "https://github.com/intentionally-left-nil/dfu"

[tool.hatch.version]
path = "dfu/__about__.py"

[tool.hatch.build]
exclude = [
  "/tests",
  "/typings"
]

[tool.hatch.build.targets.wheel]
packages = ["dfu"]

[project.scripts]
dfu = "dfu.cli:main"

[project.entry-points."dfu.plugin"]
pacman = "dfu.plugins.pacman:entrypoint"
autosave = "dfu.plugins.autosave:entrypoint"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov>=4.1.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.lint]
dependencies = [
  "pytest",
  "pytest-cov>=4.1.0",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.12.0"
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:dfu tests}"
style = [
  "black --check --diff {args:.}",
  "isort --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "isort {args:.}",
]
all = [
  "style",
  "typing",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-report=html --cov-config=.coveragerc"

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
skip_glob = ["env/*"]

[tool.mypy]
mypy_path = "typings/"


[tool.coverage.run]
source_pkgs = ["dfu", "tests"]
branch = true
parallel = true
omit = [
  "dfu/__about__.py",
]

[tool.coverage.paths]
dfu = ["dfu", "*/dfu/dfu"]
tests = ["tests", "*/dfu/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
