[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfu"
dynamic = ["version"]
description = 'Create installers from btrfs snapshots'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Anil Kulkarni", email = "anil@terminal.space" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click == 8.2.1",
  "msgspec == 0.19.0",
  "platformdirs == 4.3.8",
  "tomlkit == 0.13.3",
  "unidiff == 0.7.5",
]

[project.urls]
Documentation = "https://github.com/intentionally-left-nil/dfu#readme"
Issues = "https://github.com/intentionally-left-nil/dfu/issues"
Source = "https://github.com/intentionally-left-nil/dfu"

[tool.hatch.version]
path = "dfu/__about__.py"

[tool.hatch.build]
exclude = [
  "/tests",
  "/typings"
]

[tool.hatch.build.targets.wheel]
packages = ["dfu"]

[project.scripts]
dfu = "dfu.cli:main"

[project.entry-points."dfu.plugin"]
pacman = "dfu.plugins.pacman:entrypoint"
autosave = "dfu.plugins.autosave:entrypoint"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov>=4.1.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.lint]
dependencies = [
  "pytest",
  "pytest-cov>=4.1.0",
  "ruff>=0.12.9",
  "mypy>=1.0.0",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:dfu tests}"

lint = "ruff check {args:.}"
format = "ruff format {args:.}"
fix = [
  "ruff check --fix {args:.}",
  "ruff format --fix {args:.}",
]

all = [
  "lint",
  "format",
  "typing",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-report=html --cov-config=.coveragerc"

[tool.ruff]
exclude = [".venv", "env", ".env", "typings"]
line-length = 120

[tool.ruff.lint]
# 741: ambiguous-variable-name (allow names like l)
ignore = ["E741"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
mypy_path = "typings/"
strict = true


[tool.coverage.run]
source_pkgs = ["dfu", "tests"]
branch = true
parallel = true
omit = [
  "dfu/__about__.py",
]

[tool.coverage.paths]
dfu = ["dfu", "*/dfu/dfu"]
tests = ["tests", "*/dfu/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
