[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dfu"
version = "0.0.5"
description = 'Create installers from btrfs snapshots'
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = []
authors = [
  { name = "Anil Kulkarni", email = "anil@terminal.space" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click == 8.3.1",
  "msgspec == 0.20.0",
  "platformdirs == 4.5.1",
  "tomlkit == 0.14.0",
  "unidiff == 0.7.5",
]

[project.urls]
Documentation = "https://github.com/intentionally-left-nil/dfu#readme"
Issues = "https://github.com/intentionally-left-nil/dfu/issues"
Source = "https://github.com/intentionally-left-nil/dfu"

[project.scripts]
dfu = "dfu.cli:main"

[project.entry-points."dfu.plugin"]
pacman = "dfu.plugins.pacman:entrypoint"
autosave = "dfu.plugins.autosave:entrypoint"

[tool.uv.build-backend]
module-name = "dfu"
module-root = ""
source-exclude = ["tests/**", "typings/**"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov>=4.1.0",
]
lint = [
  "ruff>=0.12.9",
  "mypy>=1.0.0",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-report=html --cov-config=.coveragerc"

[tool.ruff]
exclude = [".venv", "env", ".env", "typings"]
line-length = 120

[tool.ruff.lint]
# 741: ambiguous-variable-name (allow names like l)
ignore = ["E741"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
mypy_path = "typings/"
strict = true


[tool.coverage.run]
source_pkgs = ["dfu", "tests"]
branch = true
parallel = true
omit = [
  "dfu/__about__.py",
]

[tool.coverage.paths]
dfu = ["dfu", "*/dfu/dfu"]
tests = ["tests", "*/dfu/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
